# constantdict

./: .gitignore  LICENSE  README.md  pyproject.toml  run-mypy.sh
.github/workflows/: ci.yaml  doc.yaml
constantdict/: __init__.py
doc/: comparison.rst  conf.py  constantdict.rst  index.rst  speed.rst
examples/: demo.py  pickletest.py  speed.py  speed_mutation.py
test/: test_constantdict.py  test_pickle.py
