[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "constantdict"
version = "2024.0"
authors = [
  { name="Matthias Diener", email="matthias.diener@gmail.com" },
]
description = "An immutable dict class."
dependencies = []
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Homepage" = "https://github.com/matthiasdiener/constantdict/"
"Bug Tracker" = "https://github.com/matthiasdiener/constantdict/issues"

[tool.flake8]
ignore = ['W503']
max-line-length = 85
count = true
inline-quotes = "double"
