[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "constantdict"
version = "2025.3"
authors = [
  { name="Matthias Diener", email="matthias.diener@gmail.com" },
]
description = "An immutable dict class."
dependencies = [
    "importlib_metadata;python_version<'3.8'",
    "typing_extensions;python_version<'3.8'"
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/matthiasdiener/constantdict"
Documentation = "https://matthiasdiener.github.io/constantdict"
Issues = "https://github.com/matthiasdiener/constantdict/issues"

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "RUF", # ruff
    "W",   # pycodestyle
]

extend-ignore = [
  "N801",  # Class name should use CapWords convention
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"


[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.typos.files]
extend-exclude = [
]
